--- a/C# Project templates/Revit 2020 External Application/TemplateRevitCs.csproj
+++ b/C# Project templates/Revit 2020 External Application/TemplateRevitCs.csproj
@@ -52,11 +52,11 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="AdWindows">
-      <HintPath>..\packages\Revit-2020.1-x64.Base.1.0.0\lib\net47\AdWindows.dll</HintPath>
+      <HintPath>C:\Program Files\Autodesk\Revit 2020\AdWindows.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="RevitAPI">
-      <HintPath>..\packages\Revit-2020.1-x64.Base.1.0.0\lib\net47\RevitAPI.dll</HintPath>
+      <HintPath>C:\Program Files\Autodesk\Revit 2020\RevitAPI.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="RevitAPIIFC">
