--- a/C# Project templates/Revit 2020 Class Library/TemplateRevitCs.csproj
+++ b/C# Project templates/Revit 2020 Class Library/TemplateRevitCs.csproj
@@ -43,31 +43,27 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="AdWindows">
-      <HintPath>..\packages\Revit-2020.1-x64.Base.1.0.0\lib\net47\AdWindows.dll</HintPath>
+      <HintPath>C:\Program Files\Autodesk\Revit 2020\AdWindows.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="RevitAPI">
-      <HintPath>..\packages\Revit-2020.1-x64.Base.1.0.0\lib\net47\RevitAPI.dll</HintPath>
+      <HintPath>C:\Program Files\Autodesk\Revit 2020\RevitAPI.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="RevitAPIIFC">
-      <HintPath>..\packages\Revit-2020.1-x64.Base.1.0.0\lib\net47\RevitAPIIFC.dll</HintPath>
+      <HintPath>C:\Program Files\Autodesk\Revit 2020\RevitAPIIFC.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="RevitAPIMacros">
-      <HintPath>..\packages\Revit-2020.1-x64.Base.1.0.0\lib\net47\RevitAPIMacros.dll</HintPath>
+      <HintPath>C:\Program Files\Autodesk\Revit 2020\RevitAPIMacros.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="RevitAPIUI">
-      <HintPath>..\packages\Revit-2020.1-x64.Base.1.0.0\lib\net47\RevitAPIUI.dll</HintPath>
+      <HintPath>C:\Program Files\Autodesk\Revit 2020\RevitAPIUI.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="RevitAPIUIMacros">
-      <HintPath>..\packages\Revit-2020.1-x64.Base.1.0.0\lib\net47\RevitAPIUIMacros.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="RevitDevTools">
-      <HintPath>..\packages\Revit2020DevTools.1.0.2\lib\net47\RevitDevTools.dll</HintPath>
+      <HintPath>C:\Program Files\Autodesk\Revit 2020\RevitAPIUIMacros.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="System" />
